实验二/samples/bad2.decaf
void main() {
  int a;

  gobble gook;
}
